cabal-version:      2.4
name:               RSAProject
version:            0.1.0.0
synopsis:           RSA implementation, breforce attack, time measures
license:            MIT
author:             Kariiem
maintainer:         Kariiem@github.com
extra-source-files: CHANGELOG.md


library internal
  build-depends:    base ^>=4.14.3.0,bytestring,random,mtl,arithmoi,integer-logarithms,integer-roots,time,criterion,criterion-measurement,deepseq
  hs-source-dirs:   src
  exposed-modules:  RSA,Primes,ByteStringUtils,TimeIt
  default-language: Haskell2010

executable Server
    main-is:          Server.hs
    default-extensions: OverloadedStrings
    ghc-options:      -main-is Server
    build-depends:    base ^>=4.14.3.0,internal,network
    hs-source-dirs:   app
    default-language: Haskell2010

executable Client
    main-is:          Client.hs
    default-extensions: OverloadedStrings
    ghc-options:      -main-is Client
    build-depends:    base ^>=4.14.3.0,internal,network
    hs-source-dirs:   app
    default-language: Haskell2010

executable CCA
    main-is:          CCA.hs
    default-extensions: OverloadedStrings
    ghc-options:      -main-is CCA
    build-depends:    base ^>=4.14.3.0,internal
    hs-source-dirs:   app
    default-language: Haskell2010


benchmark RSA-EncBench
    main-is:          TestRSA.hs
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings,BangPatterns
    hs-source-dirs:   benchmark
    build-depends:    base ^>=4.14.3.0,internal
    default-language: Haskell2010
benchmark RSA-Brute
    main-is:          Bruteforce.hs
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings,BangPatterns
    hs-source-dirs:   benchmark
    build-depends:    base ^>=4.14.3.0,internal
    default-language: Haskell2010